# OpenClaudia-riz

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_FEATURES.md  Cargo.toml  README.md
.github/: dependabot.yml
assets/: device_flow.html
docs/: binary-capability-matrix.md
prompts/base/: tools.md
src/: acp.rs  auto_learn.rs  claude_credentials.rs  compaction.rs  context.rs  file_error.rs  final_gate.rs  grounded_loop.rs  guardrails.rs  ledger.rs  lib.rs  main.rs  mcp.rs  mcp_elicitation.rs  mcp_inprocess.rs  mcp_oauth.rs  memory.rs  oauth.rs  output_style.rs  permissions.rs  pipeline.rs  prompt.rs  proxy.rs  rules.rs  skills.rs  slash_commands.rs  subagent.rs  team_memory.rs  thinking.rs  tool_intercept.rs  transcript.rs  web.rs
src/cli/: chat_repl.rs  commit_pipeline.rs  print_mode.rs
src/cli/commands/: acp.rs  auth.rs  doctor.rs  init.rs  loop_cmd.rs
src/cli/display/: diff.rs
src/cli/repl/: command_registry.rs  input.rs  keybindings.rs  mod.rs  models.rs  permissions.rs  plan_mode.rs  review.rs  session_io.rs  slash.rs
src/config/: acp.rs  hooks.rs  memory.rs  mod.rs  permissions.rs  provider.rs  stop_conditions.rs  vdd.rs  web.rs  webfetch.rs
src/coordinator/: mod.rs  permission.rs  task_queue.rs  teammate.rs
src/coordinator/tasks/: dream.rs  in_process_teammate.rs  local_main_session.rs  local_shell.rs  mod.rs
src/hooks/: claude_compat.rs  merge.rs  mod.rs
src/memdir/: entrypoint.rs  mod.rs
src/migrations/: ledger.rs  mod.rs  tests.rs
src/modes/: fragments.rs  mod.rs
src/plugins/: git.rs  install.rs  manager.rs  manifest.rs  mod.rs  policy.rs  validate.rs  zip_cache.rs
src/providers/: anthropic.rs  api_key.rs  deepseek.rs  google.rs  minimax.rs  mod.rs  model_catalog.rs  ollama.rs  openai.rs  openai_compat.rs  qwen.rs  zai.rs
src/services/: analytics.rs  auto_compactor.rs  background.rs  feature_flags.rs  lsp_diagnostics.rs  lsp_pool.rs  mcp_registry.rs  mod.rs  policy.rs  rate_limit_mock.rs  tool_executor.rs
src/session/: audit.rs  mod.rs  pricing.rs  state.rs  task.rs
src/speculation/: mod.rs
src/state/: categories.rs  mod.rs  persist.rs  store.rs
src/tools/: args.rs  ask_user.rs  chainlink.rs  command.rs  cron.rs  crosslink.rs  file_index.rs  lsp.rs  mod.rs  plan_mode.rs  registry.rs  remote_trigger.rs  skill.rs  task.rs  testutil.rs  todo.rs  tool_search.rs  web.rs  worktree.rs
src/tools/bash/: kill.rs  mod.rs  output.rs  path_constraints.rs  policy.rs
src/tools/file/: edit.rs  glob.rs  grep.rs  list.rs  mod.rs  notebook.rs  read.rs  write.rs
src/tui/: app.rs  events.rs  input.rs  messages.rs  mod.rs
src/tui/components/: help.rs  log_selector.rs  mod.rs
src/vdd/: confabulation.rs  engine.rs  finding.rs  mod.rs  parsing.rs  static_analysis.rs  transport.rs  triage.rs
tests/: acp_config_default_e2e.rs  allowed_prompt_shape_e2e.rs  analytics_event_variants_e2e.rs  analyze_with_hint_e2e.rs  anthropic_builder_helpers_e2e.rs  anthropic_content_block_e2e.rs  anthropic_tool_accumulator_event_e2e.rs  api_key_constructor_e2e.rs  api_key_redaction_e2e.rs  auto_compactor_e2e.rs  auto_learn_preferences_e2e.rs  background_agent_manager_e2e.rs  background_jobs_other_e2e.rs  bash_dispatch_validation_e2e.rs  bash_integration.rs  bash_output_kill_dispatch_e2e.rs  bash_policy_validate_e2e.rs  chainlink_dispatch_validation_e2e.rs  chainlink_e2e.rs  chat_request_message_serde_e2e.rs  check_result_variants_e2e.rs  claude_compat_hooks_e2e.rs  cli_exit_status_e2e.rs  compaction_archive_extract_e2e.rs  compaction_constructors_e2e.rs  compaction_estimator_e2e.rs  config_validation_e2e.rs  coordinator_permission_bridge_e2e.rs  coordinator_struct_methods_e2e.rs  cron_dispatch_validation_e2e.rs  cron_schedule_shape_e2e.rs  edit_file_dispatch_validation_e2e.rs  enterprise_policy_e2e.rs  estimate_message_tokens_deeper_e2e.rs  extract_usage_sse_branches_e2e.rs  feature_flags_analytics_e2e.rs  file_error_output_style_e2e.rs  file_index_e2e.rs  file_search_e2e.rs  file_tools_integration.rs  (+112 more)
