[package]
name = "openclaudia"
version = "0.1.0"
edition = "2021"
description = "Open-source universal agent harness - Claude Code capabilities for any AI"
license = "MIT"
repository = "https://github.com/dollspace-gay/openclaudia"
categories = ["development-tools", "command-line-utilities"]
keywords = ["claude", "agent", "anthropic", "ai", "llm"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server (axum 0.8)
axum = { version = "0.8", features = ["json", "ws"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# HTTP client for upstream requests
reqwest = { version = "0.13", features = ["json", "stream", "form", "query"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Configuration
config = "0.15"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Error handling
thiserror = "2"
anyhow = "1"

# UUID for session IDs
uuid = { version = "1", features = ["v4"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Filesystem
dirs = "6"

# Regex for hook matchers
regex = "1"

# POSIX shell word-splitting — used to convert a single model-supplied
# `args` string into argv tokens WITHOUT invoking a shell interpreter
# (closes shell-injection attacks on chainlink/static-analysis dispatch).
shlex = "1"

# OAuth and cryptography
base64 = "0.22"
sha2 = "0.10"
rand = "0.10"
url = "2"
ed25519-dalek = "2"
urlencoding = "2"

# CLI enhancements
rustyline = { version = "17", features = ["derive"] }
indicatif = "0.18"
crossterm = "0.29"
arboard = "3"

# TUI framework
ratatui = "0.30"

# SQLite for stateful memory
rusqlite = { version = "0.38", features = ["bundled"] }

# Headless browser for web scraping (optional, heavy dependency)
headless_chrome = { version = "1", optional = true }
scraper = { version = "0.25", optional = true }
syntect = "5"
similar = { version = "2", features = ["inline"] }

[features]
default = ["browser"]
browser = ["headless_chrome", "scraper"]

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
wiremock = "0.6"
predicates = "3"
rand_core = { version = "0.6", features = ["getrandom"] }

[lints.clippy]
# Group denies at priority -1 so specific overrides (priority 0) can selectively allow.
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
# Targeted exception (architectural review): 32 transitive duplicates from
# ratatui-termwiz optional chain, headless_chrome optional dep, the ring/rustls
# TLS chain, and ecosystem-wide windows-sys major-version drift. Fix requires
# upstream coordination, not source changes.
multiple_crate_versions = "allow"

[lib]
name = "openclaudia"
path = "src/lib.rs"

[[bin]]
name = "openclaudia"
path = "src/main.rs"
