[package]
name = "openclaudia"
version = "0.1.0"
edition = "2021"
description = "Open-source universal agent harness - Claude Code capabilities for any AI"
license = "MIT"
repository = "https://github.com/dollspace-gay/openclaudia"
keywords = ["ai", "agent", "claude", "llm", "proxy"]
categories = ["command-line-utilities", "development-tools"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO"] }

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server (axum 0.8)
axum = { version = "0.8", features = ["json", "ws"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# HTTP client for upstream requests
reqwest = { version = "0.13", features = ["json", "stream", "form", "query"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Configuration
# Disable the `ini` feature (default-on in config 0.15) — we only consume
# YAML + JSON via this dep (no `.ini` files in the project). Dropping
# `ini` removes the rust-ini → ordered-multimap → hashbrown 0.14.5
# transitive chain that pulls in RUSTSEC-2024-0402 (Borsh non-canonical
# HashMap serialization).
config = { version = "0.15", default-features = false, features = ["yaml", "json", "async"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Error handling
thiserror = "2"
anyhow = "1"

# UUID for session IDs
uuid = { version = "1", features = ["v4"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Filesystem
dirs = "6"

# Absolute-path resolution for trusted binaries (e.g. the `git` plugin
# helper). Resolves once at first use via PATH lookup and caches the
# canonical PathBuf so subsequent Command::new invocations cannot be
# redirected by a later, attacker-controlled PATH mutation. Closes the
# PATH-injection escalation in `src/plugins/git.rs` (crosslink #679).
which = "8"

# Regex for hook matchers
regex = "1"

# POSIX shell word-splitting — used to convert a single model-supplied
# `args` string into argv tokens WITHOUT invoking a shell interpreter
# (closes shell-injection attacks on chainlink/static-analysis dispatch).
shlex = "2"

# OAuth and cryptography
base64 = "0.22"
sha2 = "0.11"
rand = "0.10"
url = "2"
ed25519-dalek = "2"
urlencoding = "2"

# CLI enhancements
rustyline = { version = "18", features = ["derive"] }
indicatif = "0.18"
crossterm = "0.29"
arboard = "3"

# TUI framework
ratatui = "0.30"

# SQLite for stateful memory
rusqlite = { version = "0.38", features = ["bundled"] }

# Crosslink — local-first issue tracker + session memory + handoff
# notes. Deep integration replaces the legacy shell-out `chainlink`
# tool: we call the library's `db::*` API directly (no subprocess)
# and expose multiple OpenClaudia tools backed by the same store.
# Pinned to a published version on crates.io
# (https://crates.io/crates/crosslink). The native `sqlite3` link
# is shared via `rusqlite = "0.38"` above — both crates must agree
# (crosslink 0.8 still pins rusqlite ^0.38, which blocks rusqlite 0.40+)
# on the libsqlite3-sys major version or cargo refuses to link.
crosslink = "0.8"

# Headless browser for web scraping (optional, heavy dependency).
# `fetch` enables auto-download of a vendored Chromium revision when no
# system Chrome is present — used by the web_search / web_browser tool
# fallback in src/web.rs::launch_browser_for_scraping.
headless_chrome = { version = "1", optional = true, features = ["fetch"] }
scraper = { version = "0.27", optional = true }

# HTML → Markdown conversion (turndown.js-inspired). Used by `web_fetch`
# to render fetched pages into LLM-friendly markdown instead of routing
# them through Jina Reader's hosted converter — eliminates the
# third-party single-point-of-failure that caused HTTP 451 rejections.
htmd = "0.5"
syntect = "5"
similar = { version = "3", features = ["inline"] }

[features]
default = ["browser"]
browser = ["headless_chrome", "scraper"]

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
wiremock = "0.6"
predicates = "3"
# Property-based testing for round-trip / invariant coverage across the
# provider adapters, parsers, and other algebraic surfaces.
# (Note: `rand_core` is no longer a direct dev-dep — its public traits
# `TryRng` / `OsRng-replacement SysRng` are re-exported via `rand` 0.10.)
proptest = "1"

[lints.clippy]
# Group denies at priority -1 so specific overrides (priority 0) can selectively allow.
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
# Targeted exception (architectural review): 32 transitive duplicates from
# ratatui-termwiz optional chain, headless_chrome optional dep, the ring/rustls
# TLS chain, and ecosystem-wide windows-sys major-version drift. Fix requires
# upstream coordination, not source changes.
multiple_crate_versions = "allow"

[lib]
name = "openclaudia"
path = "src/lib.rs"

[[bin]]
name = "openclaudia"
path = "src/main.rs"
